fixed contrast problems

--- a/styles/large.css
+++ b/styles/large.css
@@ -66,6 +66,5 @@
 
   #courseContainer div p {
     padding: 1rem 3rem;
-    color: #fff;
   }
 }
