--- a/styles/small.css
+++ b/styles/small.css
@@ -3,7 +3,6 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-optical-sizing: auto;
   --primary-color: #8bb3ee;
   --secondary-color: #859769;
   --neutral: #6c778e;
@@ -107,7 +106,7 @@ main {
   border: 1px solid #aaa;
 }
 
-#courseContainer{
+#courseContainer {
   padding-bottom: 2rem;
 }
 
@@ -115,11 +114,10 @@ main {
   background-color: var(--neutral);
 }
 
-
 #courseContainer div p {
   padding: 1rem 10rem;
   text-align: center;
-/* align-items: center; */
+  color: #1c1c1c;
 }
 
 footer {
